tests/invalid/err_warn_pp_directive.ri
#error a simple error
#warn a simple warn
