tests/invalid/err_warn_pp_directive.out
tests/invalid/err_warn_pp_directive.ri:1:8: error: #error a simple error
    1 | #error a simple error
      |        ^~~~~~~~~~~~~~
tests/invalid/err_warn_pp_directive.ri:2:7: warning: #warn a simple warn
    2 | #warn a simple warn
      |       ^~~~~~~~~~~~~
rivet: error: could not compile module `err_warn_pp_directive`, aborting due to previous error; 1 warning emitted
